<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_red_dark"
        android:text="Next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_people_may_reach_you"
                android:textColor="@android:color/background_dark" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:id="@+id/rg_persons"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rd_inperson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/in_person" />

                <RadioButton
                    android:id="@+id/rd_online"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/online_coming_soon" />
            </RadioGroup>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/your_services_are_presented_locally_people_will_either_come_to_your_store_or_meet_you_in_their_own_place"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/how_to_make_appointments_with_you"
                android:textColor="@android:color/background_dark" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:id="@+id/rg_appointment"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rd_book"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/book_a_time" />

                <RadioButton
                    android:id="@+id/rd_dropin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drop_in" />
            </RadioGroup>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/no_need_for_pre_registration_people_can_stop_by_your_business_at_any_of_the_available_times"
                android:textAlignment="textStart" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>